k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: micro.local
      http:
        paths:
          # Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

          # Backend
          - path: /user-service
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 5000

          - path: /order-service
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 5000
